# beautils

./: Makefile  README.md  pyproject.toml
src/beautils/: __init__.py
src/beautils/core/: decorators.py
