[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beautils"
version = "0.0.1"
description = "Beautiful utilities for Python projects"
authors = [{ name = "Ryan Saxe", email = "ryancsaxe@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.18.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "mypy>=0.800",
    "ruff>=0.1.0",
    "black>=20.8b1",
    "isort>=5.0",
]

[project.urls]
"Homepage" = "https://github.com/RyanSaxe/beautils"
"Bug Tracker" = "https://github.com/RyanSaxe/beautils/issues"

[tool.pytest.ini_options]
addopts = "--cov=beautils --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "beautils"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "C", "D", "S"]
ignore = ["E203"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/beautils"]